			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1588 2001/03/05 02:27:26 jinmei Exp $

<200103>
Mon Mar  5 JST 2001  itojun@iijlab.net
	* sys/netinet6/raw_ip6.c: avoid 1-byte mbuf buffer overrun, and/or
	  unaligned memory access, in rip6_output().  commented by yoshfuji.
	  it will be tickled only if a evil/buggy root process runs.

2001-03-04  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_free): moved a line calling
	pfxlist_onlink_check() before the default router selection part,
	based on a request from Mattias Pettersson
	<mattias.pettersson@verkstad.net>.

2001-03-03  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* kame/pma/*: removed.
	  This function is obsolete.

2001-03-03  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* sys/netinet6/natpt_usrreq.c (natpt_uattach) call natpt_attach if
	  privileged process.
	* sys/netinet6/natpt_rule.c (natpt_in4_len2mask): convert host
	  byte order of calculated mask.
	* sys/conf/options (freebsd4): add NATPT_NAT
	* kame/natptconfig/show.c: Fix struct nlist symbol name.  Change
	  string compare method, check string length in the first place.

	  TODO: It is not so good to read '/dev/kmem', I need to think about
	  another method to read these variables from kernel.

2001-03-02  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6_rtr.c (prelist_update): clarified the
	update routine for an existing prefix.  It now tries to update
	some parameters even if the L bit is zero.  This would be
	necessary for the case where a router first advertises the prefix
	without the L bit being set, and next the same prefix with the bit
	being set.

Fri Mar  2 20:05:23 2001  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* netbsd/usr.bin/tftp/main.c: port checking fix.
	  from h-yamamo@db3.so-net.ne.jp.

Fri Mar  2 16:11:17 JST 2001  itojun@iijlab.net
	* sys/crypto/{twofish,rijndael}: change key initialization API to
	  pass binary keys instead of hexadecimal string keys.
